# jamulus

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  .pylintrc  .travis.yml  .weblate  AGENTS.md  APPLEAPPSTORE.LICENCE.WAIVER  AUTHORS  CMakeLists.txt  COMPILING.md  CONTRIBUTING.md  COPYING  ChangeLog  DEPLOY.md  INSTALL  INSTALL.md  Jamulus.entitlements  Jamulus.pro  JamulusServer.entitlements  JamulusWin-README.md  JamulusWin.ps1  JamulusWin.sln  JamulusWin.vcxproj  JamulusWin.vcxproj.filters  LICENSE.APPLEAPPSTORE  Makefile.am  README  README.md  RELATED-PROJECTS.md  RELEASE-ANNOUNCEMENT.md  RELEASE-PROCESS.md  ReleaseAnnouncement.md  SECURITY.md  Sagora.pro  TODO  TRANSLATING.md  audio_fifo.cpp  (+14 more)
.codacy/: codacy.yaml
.gemini/: restore_point_vst_stability.md
.github/: dependabot.yml  pr_3746_review_comment.md  pull_request_template.md  release-announcement-template.md
JamulusPlus/: .gitignore  CMakeLists.txt  README.md  asioshim.cpp  audio_fifo.h  country_wire_map_generated.inc  jamulus_core_juce.cpp  jamulus_core_juce.h  juce_net_abstraction.cpp  juce_net_abstraction.h  stubs_linker.cpp
JamulusPlus/installer/: jamulus_vst3.iss  make_installer.ps1
JamulusPlus/plugin/: CMakeLists.txt  ChatComponent.h  ConnectComponent.h  DebugLogger.h  FXPanelComponent.h  JamulusClientCompat.cpp  JamulusGui.h  JamulusPlus.manifest  JuceAdapter.h  JucePluginAdapter.cpp  MinimalCoreGui.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  Resampler.h  SettingsComponent.h  ThemeSupport.h  generate_vst3_manifest.py
JamulusPlus/plugin/resources/themes/American Flag/: skin.cfg
JamulusPlus/plugin/resources/themes/Default/: skin.cfg
JamulusPlus/plugin/resources/themes/Pencils Yellow/: skin.cfg
JamulusPlus/plugin/resources/themes/Pink Glitter 2/: Attributions.txt  skin.cfg
JamulusPlus/plugin/resources/themes/Sand 1/: skin.cfg
JamulusPlus/plugin/resources/themes/Skin Template/: skin.cfg
JamulusPlus/plugin/resources/themes/Water Fish Tank/: skin.cfg
JamulusPlus/plugin/resources/themes/Water Fish Tank 2/: skin.cfg
JamulusPlus/plugin/resources/themes/Water Sea/: Attributions.txt
JamulusPlus/plugin/resources/themes/Wood Rustic/: skin.cfg
JamulusPlus/scripts/: copy_vst.ps1  deploy_vst3_debug2.ps1  deploy_vst3_deps.ps1  inspect_build_and_windeploy.ps1  repair_jamulus_vst3_bundle.ps1
JamulusPlus/src/: net_abstraction.h
JamulusPlus/src/res/: jamulus-icon-2020.ai  mac-mainicon.icns
JamulusPlus/src/res/iOSIcons.xcassets/AppIcon.appiconset/: Contents.json
JamulusPlus/test/: main.cpp  vst3_load_probe.cpp
JamulusPlus/virtual_sound/: virtual_sound.h
android/: AndroidManifest.xml  androiddebug.cpp  ring_buffer.h  sound.cpp  sound.h
autobuild/: ensure_THIS_JAMULUS_PROJECT_PATH.sh
distribute_android/: Dockerfile  __example__jamulusbuild.sh  docker_action.yml  install-qt.sh
distributions/: Jamulus.1  build-debian-package-auto.sh  build-debian-package.sh  io.jamulus.Jamulus.json  io.jamulus.Jamulus.prepare.py  jamulus-server.desktop.in  jamulus-server.service  jamulus.desktop  jamulus.desktop.in  raspijamulus.sh
docs/: ARCHITECTURE.md  DEPLOY.md  JAMULUS_PROTOCOL.md  JSON-RPC.md  README.md  TCP.md  (+2 more)
juce-wrapper/libjamulus/: CMakeLists.txt
juce-wrapper/libjamulus/include_stub/: QSoundEffect  QSoundEffect.h  asio.h  asiodrivers.h  asiosys.h  unistd.h
juce-wrapper/libjamulus/include_stub/sys/: ioctl.h
juce-wrapper/libjamulus/overrides/: audioreverb_stub.cpp  csound_stub.cpp
juce-wrapper/plugin/: AudioDelay.h  CMakeLists.txt  ChatComponent.h  DebugLogger.h  FXPanelComponent.h  JamulusGui.h  JamulusVST3.manifest  JuceAdapter.h  JucePluginAdapter.cpp  JucePluginAdapter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  Resampler.h  SettingsComponent.h  generate_vst3_manifest.py  qt.conf  vst3_bootstrap.cpp
juce-wrapper/restore_points/2024-12-24_restore/: CMakeLists.txt  PluginProcessor.cpp  csound_stub.cpp  jamulus_wrapper.h
linux/: Jamulus.1  Makefile.am  autorelease_linux.sh  deploy_deb.sh  deploy_linux.sh  jackclient.cpp  jackclient.h  jamulus-server.desktop.in  jamulus.desktop.in  raspijamulus.sh  setup_repo.sh  sound.cpp  sound.h
linux/autobuild/artifacts/: autobuild_deb_1_prepare.sh  autobuild_deb_2_build.sh  autobuild_deb_3_copy_files.sh
linux/autobuild/codeQL/: auto_1_prepare.sh  auto_3_copy_files.sh
linux/debian/: README.md  control  copyright  jamulus-headless.postinst  jamulus-headless.service  jamulus.install  rules
linux/installscripts/: install4ubuntu.sh
tools/release_announcement/: README.md  pyproject.toml  pytest.ini
tools/release_announcement/prompts/: classification.prompt.yml  consolidation.prompt.yml  extraction.prompt.yml  ranking.prompt.yml  release-announcement.prompt.yml
tools/release_announcement/src/release_announcement/: __init__.py  __main__.py  app_logger.py  capability_probing.py  cli_config.py  distillation.py  main.py  registry.py  skip_rules.py  staged_routing_adapter.py  token_utils.py
tools/release_announcement/src/release_announcement/backends/: __init__.py  github_backend.py  ollama_backend.py
tools/release_announcement/src/release_announcement/backends/distillation_adapters/: common_adapter_utils.py  github_adapter.py  ollama_adapter.py
tools/release_announcement/tests/: BASELINE_COMPLETION.txt  BASELINE_MATRIX_README.md  assertions.py  cli_invocation.py  conftest.py  dummy_backend.py  run-release-announcement-baseline.sh  test_data.py  test_delay_functionality.py  test_distillation_dummy_adapter.py  test_distillation_github_adapter.py  test_distillation_ollama_adapter.py  test_distillation_orchestration.py  test_distillation_schemas.py  test_hybrid_backend_integration.py  test_placeholder_prompts.py  test_registry.py  test_registry_lazy_init.py  test_regression_matrix.py  test_staged_pipeline_integration.py  test_step2_pipeline.py  test_step2_stub_integration.py  test_step3_cli_capabilities.py  test_step4_process_commit_error_handling.py  test_step4_startup_probe_ordering.py  test_step8_output_parity.py
(+900 files in other folders)
