bin_PROGRAMS = llcon

llcon_SOURCES = ../src/buffer.cpp \
	../src/main.cpp \
	../src/socket.cpp \
	../src/channel.cpp \
	../src/util.cpp \
	../src/llconclientdlg.cpp \
	../src/clientsettingsdlg.cpp \
	../src/llconserverdlg.cpp \
	../src/chatdlg.cpp \
	../src/client.cpp \
	../src/server.cpp \
	../src/settings.cpp \
	../src/protocol.cpp \
	../src/multicolorled.cpp \
	../src/multicolorledbar.cpp \
	../src/audiomixerboard.cpp \
	../src/serverlogging.cpp \
	../src/soundbase.cpp \
	sound.cpp \
	../libs/celt/bands.c \
	../libs/celt/celt.c \
	../libs/celt/cwrs.c \
	../libs/celt/ecintrin.h \
	../libs/celt/entcode.c \
	../libs/celt/entdec.c \
	../libs/celt/entenc.c \
	../libs/celt/header.c \
	../libs/celt/kfft_single.c \
	../libs/celt/kiss_fft.c \
	../libs/celt/kiss_fftr.c \
	../libs/celt/laplace.c \
	../libs/celt/mdct.c \
	../libs/celt/modes.c \
	../libs/celt/pitch.c \
	../libs/celt/psy.c \
	../libs/celt/quant_bands.c \
	../libs/celt/rangedec.c \
	../libs/celt/rangeenc.c \
	../libs/celt/rate.c \
	../libs/celt/vq.c \
	../src/buffer.h \
	../src/global.h \
	../src/socket.h \
	../src/channel.h \
	../src/util.h \
	../src/client.h \
	../src/server.h \
	../src/settings.h \
	../src/protocol.h \
	../src/multicolorled.h \
	../src/multicolorledbar.h \
	../src/audiomixerboard.h \
	../src/serverlogging.h \
	../src/testbench.h \
	../src/soundbase.h \
	../src/llconserverdlg.h \
	../src/chatdlg.h \
	../src/llconclientdlg.h \
	../src/clientsettingsdlg.h \
	../src/llconclientdlgbase.ui \
	../src/llconserverdlgbase.ui \
	../src/clientsettingsdlgbase.ui \
	../src/chatdlgbase.ui \
	../src/aboutdlgbase.ui \
	sound.h \
	../libs/celt/celt.h \
	../libs/celt/celt_types.h \
	../libs/celt/celt_header.h \
	../libs/celt/_kiss_fft_guts.h \
	../libs/celt/arch.h \
	../libs/celt/bands.h \
	../libs/celt/fixed_c5x.h \
	../libs/celt/fixed_c6x.h \
	../libs/celt/cwrs.h \
	../libs/celt/ecintrin.h \
	../libs/celt/entcode.h \
	../libs/celt/entdec.h \
	../libs/celt/entenc.h \
	../libs/celt/fixed_generic.h \
	../libs/celt/float_cast.h \
	../libs/celt/kfft_double.h \
	../libs/celt/kfft_single.h \
	../libs/celt/kiss_fft.h \
	../libs/celt/kiss_fftr.h \
	../libs/celt/laplace.h \
	../libs/celt/mdct.h \
	../libs/celt/mfrngcod.h \
	../libs/celt/mathops.h \
	../libs/celt/modes.h \
	../libs/celt/os_support.h \
	../libs/celt/pitch.h \
	../libs/celt/psy.h \
	../libs/celt/quant_bands.h \
	../libs/celt/rate.h \
	../libs/celt/stack_alloc.h \
	../libs/celt/vq.h \
	../src/resources.qrc \
	../src/res/gig.png \
	../src/res/mainicon.png \
	../src/res/CLEDBlack.png \
	../src/res/CLEDGrey.png \
	../src/res/CLEDGreen.png \
	../src/res/CLEDYellow.png \
	../src/res/CLEDRed.png \
	../src/res/CLEDDisabledSmall.png \
	../src/res/CLEDBlackSmall.png \
	../src/res/CLEDGreySmall.png \
	../src/res/CLEDGreenSmall.png \
	../src/res/CLEDYellowSmall.png \
	../src/res/CLEDRedSmall.png \
	../src/res/VLEDBlack.png \
	../src/res/VLEDGrey.png \
	../src/res/VLEDGreen.png \
	../src/res/VLEDYellow.png \
	../src/res/VLEDRed.png \
	../src/res/VLEDDisabledSmall.png \
	../src/res/VLEDBlackSmall.png \
	../src/res/VLEDGreySmall.png \
	../src/res/VLEDGreenSmall.png \
	../src/res/VLEDYellowSmall.png \
	../src/res/VLEDRedSmall.png \
	../src/res/VRLEDBlack.png \
	../src/res/VRLEDGrey.png \
	../src/res/VRLEDGreen.png \
	../src/res/VRLEDYellow.png \
	../src/res/VRLEDRed.png \
	../src/res/VRLEDBlackSmall.png \
	../src/res/VRLEDGreySmall.png \
	../src/res/VRLEDGreenSmall.png \
	../src/res/VRLEDYellowSmall.png \
	../src/res/VRLEDRedSmall.png

# these need to be generated before the rest can be compiled

BUILT_SOURCES = moc/moc_server.cpp \
	moc/moc_soundbase.cpp \
	moc/moc_client.cpp \
	moc/moc_protocol.cpp \
	moc/moc_channel.cpp \
	moc/moc_socket.cpp \
	moc/moc_multicolorled.cpp \
	moc/moc_multicolorledbar.cpp \
	moc/moc_audiomixerboard.cpp \
	moc/moc_util.cpp \
	moc/moc_testbench.cpp \
	moc/moc_serverlogging.cpp \
	moc/moc_llconclientdlg.cpp \
	moc/llconclientdlgbase.h \
	moc/moc_clientsettingsdlg.cpp \
	moc/clientsettingsdlgbase.h \
	moc/moc_llconserverdlg.cpp \
	moc/llconserverdlgbase.h \
	moc/moc_chatdlg.cpp \
	moc/chatdlgbase.h \
	moc/aboutdlgbase.h \
	moc/resources.cpp

# and should be cleaned by make clean

CLEANFILES = $(BUILT_SOURCES)
nodist_llcon_SOURCES = $(BUILT_SOURCES)

dist-hook:
	mkdir $(distdir)/moc

moc/moc_soundbase.cpp: ../src/soundbase.h
	$(QT_MOC) ../src/soundbase.h -o moc/moc_soundbase.cpp

moc/moc_server.cpp: ../src/server.h
	$(QT_MOC) ../src/server.h -o moc/moc_server.cpp

moc/moc_client.cpp: ../src/client.h
	$(QT_MOC) ../src/client.h -o moc/moc_client.cpp

moc/moc_socket.cpp: ../src/socket.h
	$(QT_MOC) ../src/socket.h -o moc/moc_socket.cpp

moc/moc_multicolorled.cpp: ../src/multicolorled.h
	$(QT_MOC) ../src/multicolorled.h -o moc/moc_multicolorled.cpp

moc/moc_multicolorledbar.cpp: ../src/multicolorledbar.h
	$(QT_MOC) ../src/multicolorledbar.h -o moc/moc_multicolorledbar.cpp

moc/moc_audiomixerboard.cpp: ../src/audiomixerboard.h
	$(QT_MOC) ../src/audiomixerboard.h -o moc/moc_audiomixerboard.cpp

moc/moc_util.cpp: ../src/util.h
	$(QT_MOC) ../src/util.h -o moc/moc_util.cpp

moc/moc_protocol.cpp: ../src/protocol.h
	$(QT_MOC) ../src/protocol.h -o moc/moc_protocol.cpp

moc/moc_channel.cpp: ../src/channel.h
	$(QT_MOC) ../src/channel.h -o moc/moc_channel.cpp

moc/moc_testbench.cpp: ../src/testbench.h
	$(QT_MOC) ../src/testbench.h -o moc/moc_testbench.cpp

moc/moc_serverlogging.cpp: ../src/serverlogging.h
	$(QT_MOC) ../src/serverlogging.h -o moc/moc_serverlogging.cpp


moc/moc_llconclientdlg.cpp: ../src/llconclientdlg.h
	$(QT_MOC) ../src/llconclientdlg.h -o moc/moc_llconclientdlg.cpp

moc/moc_clientsettingsdlg.cpp: ../src/clientsettingsdlg.h
	$(QT_MOC) ../src/clientsettingsdlg.h -o moc/moc_clientsettingsdlg.cpp

moc/moc_llconserverdlg.cpp: ../src/llconserverdlg.h
	$(QT_MOC) ../src/llconserverdlg.h -o moc/moc_llconserverdlg.cpp

moc/moc_chatdlg.cpp: ../src/chatdlg.h
	$(QT_MOC) ../src/chatdlg.h -o moc/moc_chatdlg.cpp


moc/aboutdlgbase.h: ../src/aboutdlgbase.ui
	$(QT_UIC) ../src/aboutdlgbase.ui -o moc/aboutdlgbase.h

moc/llconclientdlgbase.h: ../src/llconclientdlgbase.ui
	$(QT_UIC) ../src/llconclientdlgbase.ui -o moc/llconclientdlgbase.h

moc/clientsettingsdlgbase.h: ../src/clientsettingsdlgbase.ui
	$(QT_UIC) ../src/clientsettingsdlgbase.ui -o moc/clientsettingsdlgbase.h

moc/llconserverdlgbase.h: ../src/llconserverdlgbase.ui
	$(QT_UIC) ../src/llconserverdlgbase.ui -o moc/llconserverdlgbase.h

moc/chatdlgbase.h: ../src/chatdlgbase.ui
	$(QT_UIC) ../src/chatdlgbase.ui -o moc/chatdlgbase.h


moc/resources.cpp: ../src/resources.qrc
	$(QT_RCC) ../src/resources.qrc -o moc/resources.cpp


llcon_CXXFLAGS = -I../src -I../libs/celt $(LIB_INCL_DIRS) $(QT_CFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT -g
